# simple-slotted-dataclasses

./: LICENSE.md  README.md  example.py  pyproject.toml  simple_slotted_dataclasses.py
